--- a/landing.html
+++ b/landing.html
@@ -12,8 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!--CDN Bootsrap 4 end-->
 </head>
+<header>
 <div>
-    <header>
         <nav>
             <ul class="lead">
                 <li><a href="home.html">Home</a></li>
@@ -60,13 +60,34 @@
         <hr>
 
         <h1 class="display-2">A Classic</h1>
-        <p class="lead" id="othergiants">It's name is there together with the other giants: <br>Starcraft, Quake, Diablo II and many more...</p>
+        <p class="lead othergiants">It's name is there together with the other giants: <br>Starcraft, Quake, Diablo II
+            and many more...</p>
         <p> Reception of The Age of Kings was highly positive. The significant number of new features was
             praised, as were the gameplay improvements. The Age of Kings received "universal acclaim", according to
             video game review aggregator Metacritic. The game was a complete hit. Most of us can probably recall the
-            time when we played it when we were little. Even now, even after 20 years the game remains alive with an active and dedicated community.
+            time when we played it when we were little. Even now, even after 20 years the game remains alive with an
+            active and dedicated community.
         </p>
         <img class="picture" src="elements/picturecastle.jpg" alt="">
+        <hr>
+        <h1 class="display-2">Relive History</h1>
+        <p class="lead othergiants">Place yourself amongst the greatest leaders in history</p>
+        <p>The game features an extensive campaign mode in which you can play as a medieval ruler eg: <a
+                href="https://en.wikipedia.org/wiki/Attila">Attila
+            the Hun</a>, <a href="https://en.wikipedia.org/wiki/Alaric_I">Alaric</a>, <a
+                href="https://en.wikipedia.org/wiki/El_Cid">El Cid</a>, <a
+                href="https://en.wikipedia.org/wiki/Moctezuma_II">Montezuma</a> and many more. There are many cities to
+            burn and villages to be razed.
+        </p>
+        <img class="picture" src="elements/Atillathehun.png" alt="">
+        <hr>
+        <h1 class="display-2">Become a Pro</h1>
+        <p class="lead othergiants">Climb the ladder of competitive play and prove your worth</p>
+        <p> The game still has an active and mature community. Almost everyone has or is playing competitively trying to be
+            the best in the world. An ELO system calculates how good any given player is. But beware because the climb is
+            hard and only the very dedicated will succeed.</p>
+        <img class="picture" src="elements/proscene.png" alt="">
+        <hr>
     </section>
 </div>
 
