--- a/gameplay.html
+++ b/gameplay.html
@@ -2,15 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><Game></Game>play</title>
+    <title>Gameplay</title>
     <link rel="stylesheet" href="css/mainstyle.css">
-    <link rel="stylesheet" href="css/gameplay.css.css">
+    <link rel="stylesheet" href="css/gameplay.css">
     <!--CDN Bootsrap 4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!--CDN Bootsrap 4 end-->
+    <script>
+        function loadData(data) {
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    document.getElementById("main").innerHTML = this.responseText;
+                }
+            };
+            xhttp.open("GET", "gameplayelements/" + data, true);
+            xhttp.send();
+        }
+    </script>
 </head>
 <body>
 <header>
@@ -21,18 +33,47 @@
             <li><a href="gameplay.html">Gameplay</a></li>
         </ul>
     </nav>
-    <aside>
-        <ul>
-            <li><a href="">Gameplay</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-        </ul>
-
-    </aside>
 </header>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti deserunt dicta eius
+    eveniet harum id ipsum iure, magni nemo nobis nostrum odio quas qui quo quos reiciendis repudiandae, tempora ullam
+    voluptas voluptatem, voluptatibus? Accusantium ad autem blanditiis dolor, dolore eius esse excepturi ipsum nam, non
+    provident vero. A, accusantium aperiam cupiditate delectus dignissimos eius eligendi expedita maxime molestias
+    mollitia nam nesciunt provident quae qui quia saepe, sequi tempore velit vitae voluptatem! Animi ea hic modi
+    nesciunt. Adipisci alias commodi deleniti dignissimos fugit inventore nulla provident voluptate. Expedita laudantium
+    odio optio quia reiciendis. Animi aperiam aut beatae blanditiis corporis doloremque hic impedit inventore ipsa
+    magnam minima minus natus necessitatibus quasi repellat sequi, sunt temporibus voluptas voluptatibus voluptatum.
+    Debitis explicabo magni maxime nihil numquam officiis placeat ratione? Ab animi assumenda autem dicta enim et eum,
+    explicabo fugit hic officiis optio perferendis, porro quam quibusdam quidem quisquam quos ratione, repellat
+    reprehenderit repudiandae sunt temporibus unde. Asperiores exercitationem illo nesciunt nihil nisi perferendis quo.
+    A aliquam consequatur cum deleniti laborum quam reiciendis reprehenderit repudiandae? Magnam molestias nihil optio
+    quibusdam quisquam, veritatis. Dolore eos ex expedita laboriosam modi nisi provident quaerat reprehenderit sunt.
+    Atque, culpa distinctio ea illo impedit laudantium placeat possimus quam, quod recusandae reiciendis sapiente sunt
+    ut. Alias distinctio dolor doloribus ipsum labore libero magnam mollitia nisi quasi. Ab aliquam aperiam autem
+    corporis debitis ipsam labore laboriosam libero maxime molestias mollitia nesciunt nostrum, quas repellat
+    repellendus tempora ullam. Aliquam architecto, cupiditate delectus deleniti eligendi et ex excepturi explicabo illo,
+    ipsa maiores natus non nostrum obcaecati officiis optio quisquam repellat sit soluta vel, veniam voluptatibus
+    voluptatum? Aliquam, assumenda eveniet harum illo molestias odit quasi vitae voluptates. Adipisci, aliquam at
+    debitis dolor doloribus ducimus eos, esse eum eveniet facilis fuga incidunt ipsam ipsum itaque labore maiores maxime
+    modi molestiae quaerat quas quia recusandae saepe sapiente sed sunt! Atque culpa cum deserunt dolore neque nostrum
+    officia quam repellat. A aspernatur error laboriosam odit praesentium. Amet architecto, atque cum, eaque eius, error
+    eum eveniet exercitationem facilis harum labore natus odio perspiciatis quae quibusdam quis velit voluptas
+    voluptatum? Atque consequatur corporis ducimus, eius expedita facilis illum laudantium maiores molestiae, neque
+    optio recusandae rem sit! At consequuntur dolore ducimus error in iure iusto labore minus modi nam nemo nihil nisi
+    nostrum perspiciatis, porro quae, saepe sint soluta tenetur ullam, unde voluptatem voluptates? Accusantium delectus
+    distinctio est et id ipsam maiores molestias quibusdam soluta ullam. Autem, quasi.</p>
+<aside>
+    <ul>
+        <li><a href="#">Ages</a></li>
+        <li><a href="#" onclick="loadData('civilizations.html');return false">Civilizations</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="">Units</a></li>
+        <li><a href="#">Technologies</a></li>
+        <li><a href="#">Buildings</a></li>
+        <li><a href="#">Game modes</a></li>
+    </ul>
+</aside>
+<main id="main">
 
+</main>
 </body>
 </html>
