--- a/ages.html
+++ b/ages.html
@@ -2,25 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ages of Empires</title>
-    <link rel="stylesheet" href="css/mainstyle.css">
+
     <link rel="stylesheet" href="css/ages.css">
-    <!--CDN Bootsrap 4-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <!--CDN Bootsrap 4 end-->
+
 </head>
 <body>
-    <header>
-    <nav>
-        <ul class="lead">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="landing.html"><img src="elements/mainlogo.png" alt="asd asd "></a></li>
-            <li><a href="gameplay.html">Gameplay</a></li>
-        </ul>
-    </nav>
-    </header>
+    <div class="container">
+        <div class="black">
+            <h1>Dark <img src="elements/darkageslogo.webp" alt="error"> Age</h1>
+        </div>
+        <hr>
+        <p>The Dark Age is the first and typical starting Age in Age of Empires II.
+            Usual activity for this age consists of exploring and collecting resources for the next age.
+            However there are some players that may choose to rush their opponent when they haven't built
+            defences yet.
+        </p>
+        <img src="elements/darkages.webp" alt="">
+        <hr class="thicc">
+        <div class="black">
+            <h1>Feudal <img src="elements/feudallogo.webp" alt=""> Age</h1>
+        </div>
+        <hr>
+        <p>The Feudal Age is a period of economic development, where military clashes usually begin to occur, such as
+            raiding enemy Villagers. It is at this stage of the game when most players decide which strategy they will
+            follow in later Ages. Usually the initial food resources are exhausted and farms begin to appear</p>
+        <img src="elements/feudalage.webp" alt="">
+        <hr class="thicc">
+        <div class="black">
+            <h1>Castle <img src="elements/castlelogo.webp" alt=""> Age</h1>
+        </div>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid est laborum nobis provident sit. Aliquid
+            blanditiis culpa in quidem temporibus.</p>
+        <img src="elements/castleage.webp" alt="">
+        <hr class="thicc">
+        <div class="black">
+            <h1>Imperial <img src="elements/imperiallogo.webp" alt=""> Age</h1>
+        </div>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolore ipsam labore ullam! Nisi quos
+            repellat repudiandae sint. Ab architecto doloribus expedita ipsa ipsum labore molestias nisi nostrum,
+            provident ut? A adipisci aspernatur dolores ducimus esse excepturi illum, impedit itaque iure quae quaerat
+            qui quia, quisquam, quo sit unde voluptate.</p>
+        <img src="elements/imperialage.webp" alt="">
+    </div>
 </body>
 </html>
