--- a/gameplay.html
+++ b/gameplay.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gameplay</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/mainstyle.css">
     <link rel="stylesheet" href="css/gameplay.css">
     <!--CDN Bootsrap 4-->
@@ -19,9 +20,10 @@
                     document.getElementById("main").innerHTML = this.responseText;
                 }
             };
-            xhttp.open("GET",data, true);
+            xhttp.open("GET", data, true);
             xhttp.send();
         }
+
         document.onload = loadData("ages.html");
     </script>
 </head>
@@ -38,7 +40,7 @@
     <hr class="horizontalRuler" id="horizontal">
     <div id="kaka" class="container">
         <p>
-            The game was mainly praised for it's revolutionary gameplay. Here you can view some of it's main <components class=""></components>
+            The game was mainly praised for it's revolutionary gameplay. Here you can view some of it's main components
         </p>
     </div>
     <hr>
@@ -47,8 +49,6 @@
             <li><a href="#" onclick="loadData('ages.html')">Ages</a></li>
             <li><a href="#" onclick="loadData('civilizations.html')">Civilizations</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="#" onclick="loadData('units.html')">Units</a></li>
-            <li><a href="#">Technologies</a></li>
             <li><a href="#">Buildings</a></li>
             <li><a href="#">Game modes</a></li>
         </ul>
@@ -56,5 +56,12 @@
     <main id="main">
     </main>
 
+    <footer>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-reddit"></a>
+        <p>&copy; All rights reserved!</p>
+    </footer>
 </body>
 </html>
